Changes and modifications

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.url=jdbc:h2:file:./db/db
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=admin
 spring.datasource.password=pass987
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 # Setup local h2 database console
 spring.h2.console.enabled=true
@@ -20,6 +20,8 @@ security.headers.frame=false
 # local h2 tables setup on startup; use the value "none" in production!
 spring.jpa.hibernate.ddl-auto=create-drop
 # spring.jpa.hibernate.ddl-auto=create
+
+spring.jpa.open-in-view=true
 
 # Logging setting
 # logging.level.org.studyeasy.SpringRestDemo=DEBUG
